# ppa

./: .gitignore  pyproject.toml
.github/workflows/: CI.yml
ppa/: __init__.py  edgedb_.py  in_memory.py
ppa/test/: test_in_memory.py
src/: __init__.py  in_memory.py
src/test/: test_in_memory.py
