[tool.poetry]
name = "ppa"
version = "0.1.0"
description = ""
authors = ["Saucisse À Roulette <gael.monachon.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {version = "^1.10.9"}


[tool.poetry.group.dev.dependencies]
pydantic = {extras = ["mypy"], version = "^1.10.9"}
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"